# charm-rabbitmq-k8s

./: .gitignore  SECURITY.md  charmcraft.yaml  pyproject.toml  run_tests  tox.ini
.github/workflows/: TiCS.yml  deploy.yml  pull-request.yaml  release-edge.yaml
lib/charms/rabbitmq_k8s/v0/: rabbitmq.py
src/: charm.py  interface_rabbitmq_peers.py  rabbit_extended_api.py
src/grafana_dashboards/: rabbitmq-overview.json  rabbitmq-quorum-queues.json
src/prometheus_alert_rules/: rabbitmq.yaml
src/templates/: notifier.sh.j2  rabbitmq-alive-check.sh.j2  rabbitmq-env.conf.j2  rabbitmq-safety-check.sh.j2  rabbitmq.conf.j2
tests/bundles/: smoke.yaml
tests/functional/: __init__.py  conftest.py  helpers.py  test_config.py  test_day_2.py  test_force_removal.py  test_observability.py  test_operations.py  test_refresh.py  test_relations.py  test_resilience.py  test_scale_down.py  test_scale_up.py  test_smoke.py
tests/unit/: conftest.py  test_charm.py  test_charm_methods.py  test_charm_scenario.py  test_functional_helpers.py  test_functional_resilience.py
